@startuml

title __CLIENT's Class Diagram__\n

  namespace Clinic.Client {
    class Clinic.Client.Client {
        {static} + main()
    }
  }
  

  namespace Clinic.Client {
    class Clinic.Client.ClientSecretary {
        ~ avaiableID : int
        ~ tasklist : List<ClientTask>
        + ClientSecretary()
        + getAppointmentPatientAll()
        + getAppointmentsCurrentDoctor()
        + getCurrentAppointmentPatient()
        + getDiagnosisAll()
        + getDoctorAll()
        + getDoctorWithID()
        + getPatientAll()
        + getPrescriptionAll()
        + getScheduleAll()
        + getScheduleDoctor()
        + handleMessageFromServer()
        + login()
        + logout()
        + makeAccount()
        + makeAppointment()
        + setDoctor()
        + setMyClient()
        + setMyGUI()
        + setScheduleDoctor()
        {static} - md5()
        - prepareTask()
    }
  }
  

  namespace Clinic.Client {
    class Clinic.Client.ClientTask {
        ~ count : int
        ~ flag : Boolean
        ~ returnValue : Object
        + ClientTask()
        + getFlag()
        + getPayload()
        + getReturnValue()
        + run()
        + setFlag()
        + setPayload()
        + setReturnValue()
    }
  }
  

  Clinic.Client.ClientSecretary o-- Clinic.Client.Connection.MyClient : myClient
  Clinic.Client.ClientSecretary o-- Clinic.Client.GUI.MyGUI : myGUI
  Clinic.Client.ClientTask o-- Clinic.Core.Payload : payload


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
